# cecli-cats

./: README.md  main.py  plan.md  pyproject.toml
cat/: index.csv
cat/01/81/0181dc52-e313-4239-8b58-1b27cfd7694b/: cat.yaml
cat/01/e0/01e00b16c9b1efdb098c1134b0ff75642fc957fdfcff2e6f9e69b319dd237a7e/: cat.yaml
cat/02/57/0257c6d1-e706-425a-9d21-f43b9a28919a/: cat.yaml
cat/02/a2/02a2a1f3-63fa-44aa-9380-6497a3a85352/: cat.yaml
cat/03/34/0334904e-a004-439a-81d0-ffbdd1c419d6/: cat.yaml
cat/05/9f/059f9c9264a8a8f51070e569c3278b95cbf60c1049ec43127ca04847303fdd2d/: cat.yaml
cat/06/b0/06b09179-4e7d-4899-bb45-cbe5cbe7e15d/: cat.yaml
cat/07/15/0715074e-f6e5-4a84-a673-24595ff8a102/: cat.yaml
cat/08/2b/082b0943b66b331692b1e133d94a78fe8b211da5af3c9b59417b86ea5962f965/: cat.yaml
cat/08/b9/08b9dcfa-d366-47ff-b0c7-38c34e8db3f6/: cat.yaml
cat/09/11/0911355ef4ff5a1b5b9b4b9e4485159b8359b45ee3e7a4404664db0a72252b39/: cat.yaml
cat/0a/50/0a504da5-3a2e-4251-a92c-c743b6a9f7ca/: cat.yaml
cat/0b/14/0b1482b1-5974-4e2e-8e40-4d8eea12bf03/: cat.yaml
cat/0b/e2/0be29b2c-9647-4c7e-8537-04a9a436e3e0/: cat.yaml
cat/0b/e8/0be85dcf27070a6811de7f581915f1abed6fa2099b047c4f129bc145f2c463d4/: cat.yaml
cat/0c/c3/0cc3f2c7-26fb-4f7a-8202-7b39805473ec/: cat.yaml
cat/0c/f4/0cf4e2a7-86a1-4c6d-8f1b-161b90242406/: cat.yaml
cat/0d/ec/0dece3da-ec78-47c7-afb2-ce2ec9d71c8b/: cat.yaml
src/: cecli_cat.py
src/cecli_cat/: main.py  utils.py
src/cecli_cat/commands/: aggregate.py  cat_summary.py  cats.py  polyglot.py  rehash.py  rehash_cats.py  reindex_cats.py  results.py
(+432 files in other folders)
