[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cecli-cat"
version = "0.1.0"
description = "Cecli Atomic Tests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest",
    "PyYAML",
]

[project.scripts]
cecli-cat = "cecli_cat.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cecli_cat"]
